--- a/css/index.css
+++ b/css/index.css
@@ -72,9 +72,18 @@ h1, h2, h3, h4, h5 {
 
 /* header */
 
+header {
+
+    border: solid black;
+}
+
+
+/* _____ */
+
 header nav {
+    border: solid black;
   display: inline-block;
-  width: 691px;
+  width: 100%;
   vertical-align: top;
   margin-top: 35px;
 }
@@ -98,11 +107,22 @@ header nav a:last-child {
   margin-right: 0;
 }
 
-header .logo {
-  margin-top: 25px;
+header .logo-tab {
+    display: none;
 }
 
+header .logo {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: 
+}
+
+
 /* cta */
+
+/* .cta {
+    border: solid black;   
+} */
 
 .cta .cta-text {
   display: inline-block;
@@ -144,7 +164,7 @@ header .logo {
 }
 
 .main-content .top-content .text-content {
-  width: 410px;
+  width: 100%;
   display: inline-block;
   margin-right: 34px;
 }
@@ -163,7 +183,7 @@ header .logo {
 }
 
 .main-content .bottom-content .text-content {
-  width: 275px;
+  width: 100%;
   display: inline-block;
   margin-right: 12px;
 }
@@ -186,5 +206,129 @@ footer {
   margin: 32px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* Tablet View Below */
+
+@media (max-width: 800px){
+
+    .container {
+        width: 100%;
+    }
+
+
+    header .mainlogo {
+        display: flex;
+        justify-content: center;
+    }
+
+    header .logo-tab {
+        display: flex;
+        justify-content: center;
+    }
+
+    header nav {
+        display: flex;
+        justify-content: center;
+    }
+
+    .main-content .top-content .text-content {
+        width: 48%;
+        display: inline-block;
+        margin-right: 0px;
+      }
+
+    .main-content .bottom-content .text-content {
+        width: 30%;
+        display: inline-block;
+        margin-right: 12px;
+      }
+
+    
+
+    header .logo {
+        display: none;
+    }
+
+    .middle-img {
+        width: 100%;
+    }
+
+    .cta .cta-text {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 0%;
+        text-align: center;
+        padding: 0%;   
+    }
+
+    .cta img {
+        display: none;
+    }
+
+
+   .cta .cta-text button {
+        background-color: #4CAF50; /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        border-radius: 28px;
+        height: 50px;
+        width: 150px;
+        
+      } 
+
+
+
+}
+
+@media (max-width: 500px) {
+    /* body {
+        background-color: green;
+    } */
+
+    header nav {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      vertical-align: top;
+      margin-top: 35px;
+      justify-content: center;
+    }
+
+    header nav a {
+        display: flex;
+        justify-content: center;
+        border-bottom: solid gray;
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    /* .main-content .bottom-content .text-content:last-child {
+        
+      } */
+
+      .main-content .top-content .text-content {
+        width: 100%;
+        display: inline-block;
+        margin-right: 0px;
+        margin-bottom: 10px;
+      }
+
+    .main-content .bottom-content .text-content {
+        width: 100%;
+        display: inline-block;
+        margin-right: 12px;
+        margin-bottom: 20px;
+      }
+
+
+
+
 }
 
