--- a/css/index.css
+++ b/css/index.css
@@ -4,48 +4,135 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -53,68 +140,79 @@ table {
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     font-family: 'Titillium Web', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     font-family: 'Bangers', cursive;
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
 
 .container {
-  width: 880px;
-  /* TB LR */
-  margin: 0 auto;
+    width: 880px;
+    /* TB LR */
+    margin: 0 auto;
 }
 
 /* header */
 
-header {
+/* header {
 
     border: solid black;
-}
+} */
 
 
 /* _____ */
 
+header .nav-sec {
+    display: flex;
+    justify-content: space-between;
+}
+
 header nav {
-    border: solid black;
-  display: inline-block;
-  width: 100%;
-  vertical-align: top;
-  margin-top: 35px;
+    /* border: solid black; */
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+    margin-top: 35px;
 }
 
 header nav a {
-  margin-right: 65px;
-  font-size: 14px;
-  color: gray;
-  text-decoration: none;
+    margin-right: 65px;
+    font-size: 14px;
+    color: gray;
+    text-decoration: none;
 }
 
 header nav a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 header nav a:first-child {
-  margin-left: 0;
+    margin-left: 0;
 }
 
 header nav a:last-child {
-  margin-right: 0;
+    margin-right: 0;
 }
 
-header .logo-tab {
+/* header .logo-tab {
     display: none;
-}
+} */
 
 header .logo {
-  margin-top: 25px;
-  display: flex;
-  flex-direction: 
+
+    margin-top: 25px;
+
+
 }
 
 
@@ -125,129 +223,147 @@ header .logo {
 } */
 
 .cta .cta-text {
-  display: inline-block;
-  vertical-align: top;
-  font-size: 77px;
-  margin-top: 120px;
-  text-align: center;
-  padding: 0px 75px;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 77px;
+    margin-top: 120px;
+    text-align: center;
+    padding: 0px 75px;
 }
 
 .cta .cta-text button {
-  background: white;
-  vertical-align: top;
-  margin-top: 6px;
-  padding: 8px 44px;
-  font-size: 17px;
-  border: 1px solid black;
-  cursor: pointer;
+    background: white;
+    vertical-align: top;
+    margin-top: 6px;
+    padding: 8px 44px;
+    font-size: 17px;
+    border: 1px solid black;
+    cursor: pointer;
 }
 
 .cta .cta-text button:hover {
-  background: black;
-  color: white;
+    background: black;
+    color: white;
 }
 
 .cta img {
-  display: inline-block;
-  margin-top: 69px;
+    display: inline-block;
+    margin-top: 69px;
 }
 
 .main-content {
-  border-top: 1px solid black;
-  margin-top: 76px;
-  padding-top: 39px;
+    border-top: 1px solid black;
+    margin-top: 76px;
+    padding-top: 39px;
 }
 
 .main-content .top-content {
-  padding: 0 10px;
+    padding: 0 10px;
 }
 
 .main-content .top-content .text-content {
-  width: 100%;
-  display: inline-block;
-  margin-right: 34px;
+    width: 100%;
+    display: inline-block;
+    margin-right: 34px;
+    margin: 10px;
 }
 
 .main-content .top-content .text-content:last-child {
-  margin-right: 0;
+    margin-right: 0;
 }
 
 .main-content .middle-img {
-  margin-top: 45px;
+    margin-top: 45px;
 }
 
 .main-content .bottom-content {
-  margin-top: 37px;
-  padding: 0 10px;
+    margin-top: 37px;
+    padding: 0 10px;
+
 }
 
 .main-content .bottom-content .text-content {
-  width: 100%;
-  display: inline-block;
-  margin-right: 12px;
+    width: 100%;
+    display: inline-block;
+    margin-right: 12px;
+    margin: 10px;
 }
 
 .main-content .bottom-content .text-content:last-child {
-  margin-right: 0;
+    margin-right: 0;
 }
 
 .contact {
-  margin-top: 57px;
-  border-top: 1px solid black;
-  padding: 39px 10px 0;
+    margin-top: 57px;
+    border-top: 1px solid black;
+    padding: 39px 10px 0;
 }
 
 .contact p {
-  margin: 20px 0;
+    margin: 20px 0;
 }
 
 footer {
-  margin: 32px 0;
-  text-align: center;
-  font-size: 14px;
+    margin: 32px 0;
+    text-align: center;
+    font-size: 14px;
 }
 
 /* Tablet View Below */
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
 
     .container {
         width: 100%;
     }
 
 
-    header .mainlogo {
-        display: flex;
-        justify-content: center;
+    /* header .mainlogo {
+        align-content: center;
+    } */
+
+    header .nav-sec {
+        flex-wrap: wrap;
     }
 
-    header .logo-tab {
+    /* header .nav-sec {
         display: flex;
         justify-content: center;
-    }
+    } */
+
+    /* header .logo-tab {
+        display: flex; 
+        justify-content: center;
+    }  */
 
     header nav {
         display: flex;
         justify-content: center;
     }
 
+    header nav a {
+        margin-right: 40px;
+    }
+
     .main-content .top-content .text-content {
         width: 48%;
         display: inline-block;
         margin-right: 0px;
-      }
+    }
 
     .main-content .bottom-content .text-content {
         width: 30%;
         display: inline-block;
         margin-right: 12px;
-      }
+    }
 
-    
+
 
     header .logo {
-        display: none;
+        /* display: none; */
+        margin-left: 230px;
+        order: -1;
+
     }
 
     .middle-img {
@@ -261,7 +377,7 @@ footer {
         justify-content: center;
         margin-top: 0%;
         text-align: center;
-        padding: 0%;   
+        padding: 0%;
     }
 
     .cta img {
@@ -269,8 +385,9 @@ footer {
     }
 
 
-   .cta .cta-text button {
-        background-color: #4CAF50; /* Green */
+    .cta .cta-text button {
+        background-color: #4CAF50;
+        /* Green */
         border: none;
         color: white;
         padding: 15px 32px;
@@ -280,25 +397,26 @@ footer {
         border-radius: 28px;
         height: 50px;
         width: 150px;
-        
-      } 
+
+    }
 
 
 
 }
 
 @media (max-width: 500px) {
-    /* body {
-        background-color: green;
-    } */
+
+    .cta {
+        margin-top: 10px;
+    }
 
     header nav {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      vertical-align: top;
-      margin-top: 35px;
-      justify-content: center;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        vertical-align: top;
+        margin-top: 35px;
+        justify-content: center;
     }
 
     header nav a {
@@ -309,26 +427,29 @@ footer {
         padding-bottom: 5px;
     }
 
-    /* .main-content .bottom-content .text-content:last-child {
-        
-      } */
+    header .logo {
+        margin-left: 130px;
+        order: -1;
 
-      .main-content .top-content .text-content {
+    }
+
+
+
+    .main-content .top-content .text-content {
         width: 100%;
         display: inline-block;
         margin-right: 0px;
         margin-bottom: 10px;
-      }
+    }
 
     .main-content .bottom-content .text-content {
         width: 100%;
         display: inline-block;
         margin-right: 12px;
         margin-bottom: 20px;
-      }
+    }
 
 
 
 
 }
-
